--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,5 +36,20 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.59.1'
-
-          
+              
+      - name: Build
+        run: hugo --minify
+      
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./public
+          cname: arekonsoftware.pl
+        
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+        
