--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./public
-          cname: arekonsoftware.pl
+          #cname: arekonsoftware.pl
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
