--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 #baseurl = "https://arekbee.github.io/blog" 
-baseurl = "http://arekonsoftware.pl/"
+baseurl = "http://arekonsoftware.pl"
 title = "Arek On Software"
 
 theme = "hugo-coder"
